[package]
name = "serde_json_test"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
edition = "2018"
publish = false

[lib]
path = "test.rs"

[dependencies]
serde_json_2 = { path = "../..", default-features = false }

[features]
default = ["std"]
std = ["serde_json_2/std"]
alloc = ["serde_json_2/alloc"]
preserve_order = ["serde_json_2/preserve_order"]
arbitrary_precision = ["serde_json_2/arbitrary_precision"]
raw_value = ["serde_json_2/raw_value"]
unbounded_depth = ["serde_json_2/unbounded_depth"]
